2009-02-15 Maximilien Cuony
    * 0.7.4 packed, and uploaded to the server !
    * Adding Romanian, Esperanto, Slovak locates

2009-02-14 Maximilien Cuony
    * Fixing gmails problem (mails not parsed)
    * Fixing gmails problem (mails sending)
    * FS#241
    * FS#245
    * FS#248 (no more wrap system on webmails)
    * Improving mail detection

2009-02-11 Maximilien Cuony
    * New gmail interface
    * Smaller editor

2009-02-10 Maximilien Cuony
    * FS#246
    * FS#240

2009-02-09 Maximilien Cuony
    * Fix problem with inline decryption
    * Fixed some problem with compose buttons

2009-02-08 Maximilien Cuony
    * 0.7.3 packed, and uploaded to the server !
    * Small bugs fixed

2009-02-07 Maximilien Cuony
    * Manage encrypted attachements and subpart

2009-02-06 Maximilien Cuony
    * Allow importing private key with the keymananger
    * New mime decoder

2009-02-05 Maximilien Cuony
    * Gmail working again
    * FS#217
    * FS#229
    * Refresh keylist when importing a file
    * FS#230

2009-02-02 Maximilien Cuony
    * Fix problem with mails sended by claws mail, kmail, Mutt

2009-02-01 Maximilien Cuony
    * FS#225
    * FS#224
    * FS#219
    * FS#226
    * FS#221

2009-01-31 Maximilien Cuony
    * FS#228
    * Splitting mime functions
    * FS#222
    * Keyring -> inline (FireGPGInline)
    * Reorganisation of FireGPG structure in progress.
    * Fixed the about windows

2009-01-26 Maximilien Cuony
    * Fix a problem with form value, thanks to 	Mateusz Baszczyk for his help

2009-01-25 Maximilien Cuony
    * 0.7.2 packed, and uploaded to the server !
    * Version 0.7.2 fix a problem with mail send in plain text (< and > are converted)
    * 0.7.1 packed, and uploaded to the server !
    * Danish added

2009-01-24 Maximilien Cuony
    * FS#214
    * New comment
    * FS#213
    * Fix a problem with firegpg message after sending a mail
    * Fix a problem when opening link in new windows widhout sending a mail
    * FS#183
    * FS#200