@@ -1,3 +1,6 @@
+2009-03-06 Maximilien Cuony
+    * Gmail working again
+
 2009-02-15 Maximilien Cuony
     * 0.7.4 packed, and uploaded to the server !
     * Adding Romanian, Esperanto, Slovak locates
